--- a/数据结构.vcxproj
+++ b/数据结构.vcxproj
@@ -19,7 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="无向图.cpp" />
+    <ClCompile Include="二分查找.cpp" />
+    <ClCompile Include="二叉查找树.cpp" />
+    <ClCompile Include="插值查找.cpp" />
+    <ClCompile Include="斐波那契查找.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{06992B51-3AAB-43A6-9CC0-1AE369FCE80B}</ProjectGuid>
